--- a/index_overview.html
+++ b/index_overview.html
@@ -31,24 +31,30 @@
 		height: 100%;
 		padding-top: 50px;
 	}	
-	<!-- .container-map{ -->
-				<!-- width: 100%; -->
-		<!-- height: 100%; -->
-	<!-- } -->
+	.logo {
+		background-image: url('data/dob_logo.png');
+		background-repeat: no-repeat;
+		background-position: center;
+		float: right;
+		background-size: 70px;
+		height: 50px;
+		width: 110px;	 
+	}
 </style>
 
 
 <body  class="application">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<a class="logo" href="https://www1.nyc.gov/site/buildings/index.page" target="_blank"> </a>
     <div class="container-fluid">
       <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-		<li class="navbar-brand" style="font-size:26px">COURSE PROVIDERS</li>
-        </ul>
+			<ul class="nav navbar-nav navbar-left">
+				<li class="navbar-brand" style="font-size:26px">COURSE PROVIDERS</li>
+			</ul>
       </div>
     </div>
   </div>
-  <iframe frameborder="0" scrolling="no" src="https://nycdob.github.io/CourseProviders/index_map"></iframe>
+  <iframe frameborder="0" scrolling="no" src="index_map.html"></iframe>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
