--- a/index_map.html
+++ b/index_map.html
@@ -82,7 +82,7 @@
 			}
 			
 			#dropdownCourses {
-			  width: 200px;
+			  width: 500px;
 			  max-width: 100%;
 			}
 			.filterBtn {
@@ -274,7 +274,7 @@
 									<option value='C66'>8-Hour Fall Prevention</option>
 								</select>
 								<span style="padding-right:20px"></span>
-						<label for="" style="color:#666666;">SST Approved: </label>
+						<label for="" style="color:#666666;">SST Courses? </label>
 								<select id="dropdownSST" >
 									<option value="sstAll" selected>All</option>
 									<option value="sstYes">Yes</option>	
