--- a/index_map.html
+++ b/index_map.html
@@ -274,11 +274,11 @@
 									<option value='C66'>8-Hour Fall Prevention</option>
 								</select>
 								<span style="padding-right:20px"></span>
-						<label for="" style="color:#666666;">SST Courses? </label>
+						<label for="" style="color:#666666;">SST Status: </label>
 								<select id="dropdownSST" >
-									<option value="sstAll" selected>All</option>
-									<option value="sstYes">Yes</option>	
-									<option value="sstNo">No</option>
+									<option value="sstAll" selected>Any</option>
+									<option value="sstYes">Only SST</option>	
+									<option value="sstNo">Non-SST</option>
 								</select>
 						
 						<span style="padding-right:20px"></span>
