--- a/index_map.html
+++ b/index_map.html
@@ -51,6 +51,10 @@
 				fill: #f00000;
 				fill-opacity: .7;
 			}
+			.pointSBS{
+				fill: #0bd7f4;
+				fill-opacity: .7;	
+			}
 			#map-container{
 				ZZZheight: 810px;    
 				height: 92vh;
@@ -183,6 +187,43 @@
 			  font-family: Oswald,sans-serif;
 			  color: #d96b27;
 			}
+	    
+			.ui {
+				top: 10px;
+				left: 50px;
+				padding: 8px;
+				position: absolute;
+				background-color: #fff;
+				border: 2px solid #707070;
+				border-radius: 7px;
+				width: 250px;
+			}
+
+			.point_CP {
+			  position: relative;
+			  top: 3px;
+			  height: 15px;
+			  width: 15px;
+			  background-color: #f00000;
+			  border-radius: 50%;
+			  display: inline-block;
+			}
+
+			.point_SBS {
+			  position: relative;
+			  top: 3px;
+			  height: 15px;
+			  width: 15px;
+			  background-color: #0bd7f4;
+			  border-radius: 50%;
+			  display: inline-block;
+			}
+
+			.legend_label{
+				padding-left: 10px;
+				font-size: 14px;
+				display: inline-block;
+			}
     </style>
 </head>
 
@@ -291,7 +332,14 @@
 <div class="row" >
 	<div class="col-md-9">
 		<div class="chart-stage" id="map-container" >
-			<div id="map"></div>
+			<div id="map">
+				<div id="ui-container" class="ui" style="z-index: 401">				
+					<h4>Legend</h4>						  
+						<span class="point_CP"></span><span class="legend_label">Course Providers</span>							
+					<br/>
+						<span class="point_SBS"></span><span class="legend_label">SBS Worker Information Centers</span>	
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="col-md-3" >
@@ -445,9 +493,11 @@ $(document).ready(function(){
 	var width = $("#map").width(),
 		height = $("#map").height(),
 		points = [],
+	    	pointsSBS = [],
 		table_map = [],
 		filteredData,	
 		latLngs = [],
+	    	latLngsSBS = [],
 		zoomSelect = 15,
 		selectedCourse="allCourses",
 		selectedSST="sstAll",
@@ -508,6 +558,70 @@ $(document).ready(function(){
 		
 
 	});
+	
+	var pointsOverlaySBS = L.d3SvgOverlay(function(sel,proj){
+	var pointsUpdSBS = sel.selectAll('circle').data(pointsSBS);	
+	pointsUpdSBS.enter()
+		.append('circle')
+		.attr('cx',function(d){return proj.latLngToLayerPoint(d.latLng).x;})
+		.attr('cy',function(d){return proj.latLngToLayerPoint(d.latLng).y;})
+		.attr('class', function(d){
+			return "pointSBS";
+		})
+
+		.on('click', function(d){
+			if(d3.select(this).style("fill-opacity") != 0){
+				tooltip.style("visibility", "visible");
+				tooltip.html(
+					'NAME: ' +d.name + '</br>' +								
+					'ADDRESS: ' +d.address + '</br>' +					
+					'PHONE: ' +d.phone + '</br>' +	
+					'LANGUAGE: ' +d.language						
+				)
+				if (d3.event.pageX > (width - 200)) {
+				   tooltip.style("left", (d3.event.pageX - 350) + "px");
+				} else {
+				   tooltip.style("left", (d3.event.pageX + 20) + "px")
+						.style("top", (d3.event.pageY -30) + "px");
+				}
+				if (d3.event.pageY > (height - 150)) {
+				   tooltip.style("top", (d3.event.pageY -100) + "px");
+				} else {
+				   tooltip.style("top", (d3.event.pageY -30) + "px");
+				}
+			}
+		})
+		.on("mouseover", function(d, i){
+			if(d3.select(this).style("fill-opacity") != 0){
+				tooltip.transition().duration(0); 
+				$(this).attr("style", "cursor: pointer; fill: #eef442; fill-opacity: 1;");
+			}
+		})
+		.on("mouseout", function(d, i){	
+			if(d3.select(this).style("fill-opacity") != 0){
+				$(this).attr("style", "stroke-width: 0px; fill-opacity: .7;");
+				return tooltip.transition().delay(500).style("visibility", "hidden"); 
+			}
+		});
+		pointsUpdSBS.attr('r', 6 / proj.scale);
+
+	});
+	
+	d3.csv("data/SBS_WorkersInfoCenters.csv",function(data){
+				pointsSBS = data.map(function(d){
+				d.latLng = [+d.Lat,+d.Long];
+				d.name = [d.Name];
+				d.address = [d.Address];
+				d.phone = [d.Phone];
+				d.language = [d.Language];
+			return d;
+				
+			});
+		pointsOverlaySBS.addTo(map);
+		latLngsSBS = data.map(function(d){				
+			return d.latLng;
+		});
+	});	
 
 	function loadTable(data){
 			$(function(){
