--- a/index_map.html
+++ b/index_map.html
@@ -341,7 +341,7 @@
 					<h4>Legend</h4>						  
 						<span class="point_CP"></span><span class="legend_label">Course Providers</span>							
 					<br/>
-						<span class="point_SBS"></span><span class="legend_label">SBS Worker Information Centers</span>	
+						<span class="point_SBS"></span><span class="legend_label">Worker Information Centers</span>	
 				</div>
 			</div>
 		</div>
