--- a/index_overviewnew.html
+++ b/index_overviewnew.html
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <iframe frameborder="0" scrolling="no" src="index_map.html"></iframe>
+  <iframe frameborder="0" scrolling="no" src="index_mapnew.html"></iframe>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
