--- a/index_overviewnew.html
+++ b/index_overviewnew.html
@@ -4,7 +4,7 @@
   <title>COURSE PROVIDERS</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="assets/css/keen-dashboards.css" />
+  <link rel="stylesheet" type="text/css" href="https://nycdob.github.io/DOB_Dashboards/assets/css/keen-dashboards.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <script src="https://d3js.org/d3.v3.min.js"></script>
 
@@ -32,7 +32,7 @@
 		padding-top: 50px;
 	}	
 	.logo {
-		background-image: url('data/dob_logo.png');
+		background-image: url('https://nycdob.github.io/CourseProviders/data/dob_logo.png');
 		background-repeat: no-repeat;
 		background-position: center;
 		float: right;
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <iframe frameborder="0" scrolling="no" src="index_mapnew.html"></iframe>
+  <iframe frameborder="0" scrolling="no" src="https://nycdob.github.io/CourseProviders/index_mapnew.html"></iframe>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
